--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $placeholder-color: #92929D;
 $text-gigantic: 64px;
 $text-huge: 34px;
 $text-big: 24px;
+$text-large: 20px;
 $text-medium: 18px;
 $text-normal: 16px;
 $text-mob-normal: 14px;
@@ -27,6 +28,7 @@ $secondary-border: 1px solid $prim-color-black;
 $border-radius-big: 62px;
 $border-radius: 30px;
 $border-radius-small: 20px;
+$border-radius-square: 8px;
 
 $lh-gigantic: 1.85;
 $lh-very-huge: 1.416;
