--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -10,7 +10,7 @@
 		line-height: $lh-very-small;
 		height: 19px;
 
-		@media (min-width: 834px) {
+		@media (width >= 834px) {
 			font-size: $text-normal;
 		}
 	}
@@ -19,7 +19,7 @@
 .text {
 	height: 38px;
 
-	@media (max-width: 1439px) {
+	@media (width < 1440px) {
 		margin-bottom: $distance-small;
 	}
 }
@@ -30,7 +30,7 @@
 	gap: $distance-very-small;
 	margin: $distance-small 0;
 
-	@media (min-width: 834px) {
+	@media (width >= 834px) {
 		margin: $distance-normal 0;
 		gap: $distance-small;
 	}
@@ -51,7 +51,7 @@
 		background-repeat: no-repeat;
 		background-size: contain;
 
-		@media (min-width: 834px) {
+		@media (width >= 834px) {
 			width: 1.25rem;
 			height: 1.25rem;
 		}
@@ -65,7 +65,7 @@
 		padding-left: $distance-small;
 		height: 21px;
 
-		@media (min-width: 834px) {
+		@media (width >= 834px) {
 			font-size: $text-normal;
 			padding-left: $distance-normal;
 			line-height: $lh-very-normal;
@@ -74,18 +74,41 @@
 }
 
 .heroImg {
-	width: auto;
-	height: auto;
+	width: 100%;
+	height: 274px;
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
 	overflow: hidden;
 
-	@media (min-width: 834px) {
-		width: 694px;
+	@media (width >= 834px) {
+		width: 100%;
 		height: 500px;
 	}
 
-	@media (min-width: 1440px) {
+	@media (width >= 780px) and (width < 834px) {
+		width: auto;
+		position: absolute;
+		right: 70px;
+		top: 0;
+	}
+
+	@media (width >= 1140px) and (width < 1300px) {
+		width: auto;
+
+		position: absolute;
+		right: 70px;
+		top: 0;
+	}
+	@media (width >= 1300px) and (width < 1440px) {
+		min-width: 694px;
+		width: auto;
+
+		position: absolute;
+		right: 70px;
+		top: 0;
+	}
+
+	@media (width >= 1440px) {
 		position: absolute;
 		right: 70px;
 		top: 0;
