--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -1,80 +1,85 @@
 @import "src/styles/variables.scss";
 
 .eventsWrapper {
-  background-color: $prim-color-green;
+	background-color: $prim-color-green;
 
-  .events {
-    display: flex;
-    align-items: center;
-    gap: 5rem;
+	.events {
+		display: flex;
+		align-items: center;
+		gap: 5rem;
+		margin-top: 100px;
 
-    .imageBlock {
-      div {
-        text-transform: uppercase;
-        color: #2454ff;
-        display: flex;
-        flex-direction: column;
-        gap: $distance-small;
-      }
+		.imageBlock {
+			div {
+				text-transform: uppercase;
+				color: #2454ff;
+				display: flex;
+				flex-direction: column;
+				gap: $distance-small;
+			}
 
-      img {
-        margin-bottom: 3.125rem;
-        margin-left: 100px;
+			img {
+				margin-bottom: 3.125rem;
+				margin-left: 100px;
 
-        @media (max-width: 1440px) {
-          width: 16.125rem;
-          height: 33.625rem;
-        }
+				@media (max-width: 1439px) {
+					width: 16.125rem;
+					height: 33.625rem;
+				}
 
-        @media (max-width: 834px) {
-          width: 7.625rem;
-          height: 16.5rem;
-        }
-      }
-    }
+				@media (max-width: 833px) {
+					width: 7.625rem;
+					height: 16.5rem;
+				}
+			}
+		}
 
-    .eventsBlock {
-      flex-grow: 1;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-areas: 'soonest soonest';
-      gap: $distance-normal;
-    }
+		.eventsBlock {
+			flex-grow: 1;
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-template-areas: "soonest soonest";
+			gap: $distance-normal;
+		}
 
-    @media (max-width: 1440px) {
-      gap: 1rem;
+		@media (max-width: 1439px) {
+			gap: 1rem;
+			margin-top: 62px;
+			justify-content: center;
 
-      .imageBlock {
-        img {
-          margin-left: 0;
-          width: 254px;
-        }
-      }
+			.imageBlock {
+				img {
+					margin-left: 0;
+					width: 254px;
+				}
+			}
 
-      .eventsBlock {
-        gap: $distance-small;
-      }
-    }
+			.eventsBlock {
+				gap: $distance-small;
+				flex-grow: 0;
+			}
+		}
 
-    @media (max-width: 834px) {
-      flex-direction: column-reverse;
+		@media (max-width: 833px) {
+			flex-direction: column-reverse;
+			margin-top: 15px;
 
-      .imageBlock {
-        img {
-          height: 264px;
-          width: 122px;
-          margin: 0 auto $distance-small;
-        }
+			.imageBlock {
+				img {
+					height: 264px;
+					width: 122px;
+					margin: 0 auto $distance-small;
+				}
 
-        div {
-          width: 200px;
-        }
-      }
+				div {
+					width: 200px;
+				}
+			}
 
-      .eventsBlock {
-        grid-template-columns: 1fr;
-        grid-template-areas: 'soonest';
-      }
-    }
-  }
+			.eventsBlock {
+				grid-template-columns: 1fr;
+				grid-template-areas: "soonest";
+			}
+		}
+	}
 }
