--- a/src/components/ServiceBlock/ServiceBlock.module.scss
+++ b/src/components/ServiceBlock/ServiceBlock.module.scss
@@ -1,18 +1,17 @@
 .services {
-  margin-top: 1.6875rem;
-  display: flex;
-  gap: 1.6875rem;
+	margin-top: 1.6875rem;
+	display: flex;
+	gap: 1.6875rem;
 
-  &>li {
-    flex: 1 1 50%
-  }
+	& > li {
+		flex: 1 1 50%;
+	}
 
-  @media (max-width: 1440px) {
-    flex-direction: column;
-    justify-content: center;
-    &>li {
-      margin: 0 auto;
-    }
-  }
-
+	@media (width < 992px) {
+		flex-direction: column;
+		justify-content: center;
+		& > li {
+			margin: 0 auto;
+		}
+	}
 }
