--- a/src/components/EventCard/EventCard.module.scss
+++ b/src/components/EventCard/EventCard.module.scss
@@ -12,7 +12,7 @@
 	}
 
 	.eventTitleName {
-		width: 140px;
+		width: 220px;
 	}
 }
 
@@ -21,6 +21,7 @@
 	color: $white;
 	background-color: $prim-color-blue;
 	width: 100%;
+	border: 1px solid #2454ff;
 
 	.speakers {
 		display: grid;
@@ -53,6 +54,7 @@
 	background-color: $white;
 	width: 360px;
 	display: grid;
+	border: 1px solid #2454ff;
 
 	h2 {
 		color: $prim-color-blue;
