--- a/src/components/ServiceBlock/ServiceBlock.module.scss
+++ b/src/components/ServiceBlock/ServiceBlock.module.scss
@@ -3,14 +3,24 @@
 	display: flex;
 	gap: 1.6875rem;
 
-	& > li {
+	@media only screen and (max-width: 991px) {
+		margin-top: 2rem;
+		gap: 2rem;
+	}
+
+	&>li {
 		flex: 1 1 50%;
+
+		@media only screen and (max-width: 991px) {
+			flex-basis: 100%;
+		}
 	}
 
 	@media (width < 992px) {
 		flex-direction: column;
 		justify-content: center;
-		& > li {
+
+		&>li {
 			margin: 0 auto;
 		}
 	}
