--- a/src/components/BriefForm/BriefForm.module.scss
+++ b/src/components/BriefForm/BriefForm.module.scss
@@ -7,15 +7,35 @@
 .form {
   display: grid;
   gap: 32px;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+
+  @media only screen and (max-width: 768px) {
+    gap: 15px;
+  }
 }
 
 .inputContainer {
   position: relative;
 
-  @for $i from 1 through 4 {
+  @for $i from 1 through 12 {
     &.columns_#{$i} {
       grid-column: span #{$i};
+
+      @media only screen and (max-width: 1200px) {
+        grid-column: span 12;
+      }
+    }
+  }
+
+  @for $i from 1 through 12 {
+    &.columns_xl_#{$i} {
+      @media only screen and (max-width: 1200px) {
+        grid-column: span #{$i};
+      }
+
+      @media only screen and (max-width: 768px) {
+        grid-column: span 12;
+      }
     }
   }
 
@@ -40,6 +60,7 @@
   }
 
   label {
+    display: block;
     margin-bottom: 10px;
     font-weight: 500;
     color: $placeholder-color;
@@ -54,7 +75,6 @@
     font-weight: 600;
     outline: none;
     width: 100%;
-    // height: 100%;
   }
 
   select {
@@ -64,16 +84,34 @@
 
 .image {
   margin-top: 25px;
-  grid-column: 5/-1;
+  grid-column: 8/-1;
   grid-row: 2/5;
   object-fit: contain;
+
+  @media only screen and (max-width: 1200px) {
+    grid-row: 9/9;
+    grid-column: span 12;
+    margin: 0 auto;
+  }
+
+  @media only screen and (max-width: 768px) {
+    margin-top: 55px;
+  }
 }
 
 .sendBtn {
   width: 100% !important;
   max-width: 230px;
   margin: 0 auto;
-  grid-column: 2/4;
+  grid-column: 3/6;
+
+  @media only screen and (max-width: 1200px) {
+    grid-column: span 12;
+  }
+
+  @media only screen and (max-width: 768px) {
+    margin-top: 32px;
+  }
 }
 
 .error {
