--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
-@import "src/styles/variables.scss";
+@import 'src/styles/variables.scss';
 
 .footerWrapper {
 	background-color: $prim-color-green;
@@ -15,8 +15,8 @@
 		grid-template-columns: max-content max-content max-content;
 		grid-template-rows: auto auto auto;
 		grid-template-areas:
-			"logo socials contacts"
-			". .  withUs";
+			'logo socials contacts'
+			'. .  withUs';
 
 		.logo {
 			grid-area: logo;
@@ -69,9 +69,9 @@
 			gap: 2rem;
 			grid-template-columns: 1fr 1fr;
 			grid-template-areas:
-				"logo logo"
-				"socials socials"
-				"contacts withUs";
+				'logo logo'
+				'socials socials'
+				'contacts withUs';
 		}
 
 		.logo,
@@ -90,14 +90,48 @@
 			padding: 4rem 3rem;
 			grid-template-columns: 1fr;
 			grid-template-areas:
-				"logo"
-				"socials"
-				"contacts"
-				"withUs";
+				'logo'
+				'socials'
+				'contacts'
+				'withUs';
 
 			.withUs {
 				justify-self: left;
 			}
+		}
+	}
+
+	.footerLink {
+		border-radius: $border-radius;
+		text-align: center;
+		cursor: pointer;
+		transition: $transition;
+		display: inline-block;
+		margin-bottom: 15px;
+		&:is(:hover, :focus) {
+			text-decoration: none;
+			background-color: transparent;
+			border: 1px solid $white;
+		}
+	}
+
+	.primaryFooterLink {
+		@extend .footerLink;
+		background-color: $prim-color-blue;
+		color: $white;
+		padding: 0.375rem 0;
+		border: none;
+		width: 11rem;
+		height: 2.75rem;
+		font-size: $text-medium;
+		line-height: $lh-very-big;
+
+		@media (min-width: 768px) {
+			padding: 0.625rem 0;
+			width: 100%;
+		}
+		@media (min-width: 1440px) {
+			width: 11.875rem;
 		}
 	}
 }
