--- a/src/components/Service/Service.module.scss
+++ b/src/components/Service/Service.module.scss
@@ -16,6 +16,11 @@
 
 	ul {
 		list-style: disc inside;
+		margin-bottom: 28px;
+
+		@media only screen and (max-width: 576px) {
+			margin-bottom: 18px;
+		}
 
 		li {
 			margin-top: 0.625rem;
