Update image in brief page

--- a/src/app/(frontend)/brief/page.module.scss
+++ b/src/app/(frontend)/brief/page.module.scss
@@ -7,7 +7,7 @@
 
   h1 {
     margin-bottom: $distance-small;
-    width: 100%;
+    width: 100% !important;
   }
 
   h4 {
@@ -25,6 +25,7 @@
     height: 366px;
 
     .banner {
+      height: 100%;
       object-fit: cover;
       object-position: center;
       border-radius: 0 0 $border-radius-big $border-radius-big;
@@ -34,6 +35,8 @@
       position: absolute;
       bottom: 25px;
       right: 20px;
+      width: auto;
+      object-fit: contain;
     }
 
     @media (max-width: 1440px) {
