--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,15 +1,13 @@
-@import "src/styles/variables.scss";
+@import 'src/styles/variables.scss';
 
 .logoLarge {
 	display: block;
-	height: 2.6875rem;
-	width: 9.125rem;
+	width: 125px;
 	padding-top: $distance-small;
 	margin-bottom: $distance-small;
 
-	@media (min-width: 1440px) {
-		height: 8.625rem;
-		width: 25.625rem;
+	@media (min-width: 834px) {
+		width: 357px;
 
 		padding-top: $distance-big;
 		margin-bottom: $distance-big;
@@ -17,8 +15,8 @@
 
 	img {
 		@media (min-width: 1440px) {
-			width: 25.625rem;
-			height: 4.75rem;
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
