--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -6,22 +6,10 @@
 	max-width: 1440px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 70px;
-	padding-right: 70px;
 
 	@media only screen and (max-width: 575px) {
 		padding-left: 10px;
 		padding-right: 10px;
-	}
-}
-.wrapperLogoBox {
-	padding-top: $distance-small;
-
-	@media (min-width: 834px) {
-		width: 357px;
-
-		padding-top: $distance-big;
-		margin-bottom: $distance-big;
 	}
 }
 .wrapperNotFound {
@@ -42,6 +30,7 @@
 .linkToMain {
 	width: 100%;
 	margin-top: 82px;
+	height: auto;
 
 	@media (min-width: 834px) {
 		width: 260px;
