Add form to individual event page

--- a/src/app/(frontend)/event/[id]/page.module.scss
+++ b/src/app/(frontend)/event/[id]/page.module.scss
@@ -2,13 +2,72 @@
 
 .section {
     h2.title {
-        width: 100%;
-        max-width: 800px;
         margin-bottom: 24px;
     }
 
     h3.title {
         margin-bottom: 40px;
+    }
+}
+
+.wrapper {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    row-gap: 40px;
+    column-gap: 20px;
+
+    @media only screen and (max-width: 1280px) {
+        flex-direction: column;
+    }
+}
+
+.content {
+    width: 100%;
+    max-width: calc(60% - 20px);
+
+    @media only screen and (max-width: 1280px) {
+        max-width: 100%;
+    }
+}
+
+.form {
+    width: 100%;
+    max-width: calc(40% - 20px);
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    @media only screen and (max-width: 1280px) {
+        flex-direction: row;
+        max-width: 100%;
+    }
+
+    @media only screen and (max-width: 833px) {
+        flex-direction: column-reverse;
+    }
+
+    .img {
+        @media only screen and (max-width: 1280px) {
+            order: 2;
+            width: 100%;
+            max-width: calc(50% - 16px);
+        }
+
+        @media only screen and (max-width: 833px) {
+            max-width: 100%;
+        }
+    }
+
+    .eventForm {
+        @media only screen and (max-width: 1280px) {
+            width: 100%;
+            max-width: calc(50% - 16px);
+        }
+
+        @media only screen and (max-width: 833px) {
+            max-width: 100%;
+        }
     }
 }
 
@@ -25,8 +84,6 @@
 }
 
 .description {
-    width: 100%;
-    max-width: 900px;
     margin-bottom: 24px;
 }
 
@@ -39,6 +96,8 @@
 .speakersWrapper {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 30px;
     column-gap: 120px;
 }
 
