--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -94,24 +94,25 @@
 		height: 500px;
 	}
 
-	@media (width >=780px) and (width < 834px) {
+	// @media (width >=780px) and (width < 834px) {
+	// 	width: auto;
+	// 	position: absolute;
+	// 	right: 70px;
+	// 	top: 0;
+	// }
+
+	@media (width >=1024px) and (width < 1280px) {
 		width: auto;
+		max-width: 450px;
+		height: 400px;
 		position: absolute;
 		right: 70px;
 		top: 0;
 	}
 
-	@media (width >=1140px) and (width < 1300px) {
+	@media (width >=1280px) and (width < 1440px) {
 		width: auto;
-
-		position: absolute;
-		right: 70px;
-		top: 0;
-	}
-
-	@media (width >=1300px) and (width < 1440px) {
-		min-width: 694px;
-		width: auto;
+		max-width: 600px;
 
 		position: absolute;
 		right: 70px;
