--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -65,11 +65,9 @@
 
     .menuBtns {
       width: fit-content;
+      margin: auto 0;
       padding: 2rem;
-
-      li {
-        width: 5rem;
-      }
+      text-align: center;
     }
   }
 }
