--- a/src/app/dashboard/components/Accordion/Accordion.module.scss
+++ b/src/app/dashboard/components/Accordion/Accordion.module.scss
@@ -14,6 +14,7 @@
 }
 
 .gridHeader {
+	text-transform: uppercase;
 	background: #f1f1f1;
 	border-top-left-radius: 14px;
 	border-top-right-radius: 14px;
