--- a/src/app/dashboard/components/Header/Header.module.scss
+++ b/src/app/dashboard/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
     padding: 13px 70px;
-    background-color: #fff;
+    background-color: $white;
     border-bottom: 2px solid #E0E0E0;
 }
 
