--- a/src/app/dashboard/components/Sidebar/Sidebar.module.scss
+++ b/src/app/dashboard/components/Sidebar/Sidebar.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     max-width: 240px;
     padding: 24px 0;
-    background-color: #fff;
+    background-color: $white;
     border-right: 2px solid #E0E0E0;
 }
 
