--- a/src/app/dashboard/settings/page.module.scss
+++ b/src/app/dashboard/settings/page.module.scss
@@ -1,57 +1,81 @@
 @import "src/styles/variables.scss";
 
-.section {
-  @media (max-width: 834px) {
-    padding-bottom: $distance-very-small;
+.pageLoaderWrapper {
+  .loader {
+    height: 100vh;
+    font-size: 10px;
   }
+}
 
-  h1 {
-    margin-bottom: $distance-small;
-    width: 100% !important;
+.title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1;
+  text-transform: capitalize;
+
+  margin-bottom: 28px;
+}
+
+.editorBlock {
+  padding: 60px;
+  border: .3px solid #B9B9B9;
+  border-radius: 14px;
+  background-color: $white;
+}
+
+.formWrapper {
+  width: 100%;
+  max-width: 780px;
+  margin: 0 auto;
+}
+
+.editImage {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  align-items: center;
+}
+
+.imageWrapper {
+  width: 80px;
+  border-radius: 100px;
+  overflow: hidden;
+  border: 1px solid $placeholder-color;
+}
+
+.editImageBtn {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.1;
+  color: #4379ee;
+  transition: $transition;
+
+  &:hover {
+    color: $prim-color-blue;
   }
+}
 
-  h4 {
-    max-width: 36.8125rem;
-    margin-bottom: $distance-normal;
+.editInfo {
+  margin-top: 40px;
+}
 
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+}
 
-    @media (max-width: 834px) {
-      font-weight: normal;
-    }
-  }
+.input {
+  flex: 1 1 calc(50% - 30px);
+}
 
-  .bannerBlock {
-    position: relative;
-    height: 366px;
+.button {
+  margin: 0 auto;
+  padding: 16px 96px;
+}
 
-    .banner {
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      border-radius: 0 0 $border-radius-big $border-radius-big;
-    }
-
-    .welcome {
-      position: absolute;
-      bottom: 25px;
-      right: 20px;
-      width: auto;
-      object-fit: contain;
-    }
-
-    @media (max-width: 1440px) {
-      height: 500px;
-    }
-
-    @media (max-width: 834px) {
-      height: 300px;
-
-      .welcome {
-        width: 164px;
-        height: 92px;
-        bottom: 10px;
-        right: 10px;
-      }
-    }
+.loaderWrapper {
+  .loader {
+    font-size: 10px;
   }
 }
