--- a/src/components/AboutUs/AboutUs.module.scss
+++ b/src/components/AboutUs/AboutUs.module.scss
@@ -69,7 +69,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	background: #ffffff;
+	background: $white;
 	border-radius: 20px;
 	overflow: hidden;
 	border: 1px solid $prim-color-blue;
