--- a/src/components/MemberCard/MemberCard.module.scss
+++ b/src/components/MemberCard/MemberCard.module.scss
@@ -9,7 +9,7 @@
     border: 1px solid $prim-color-blue;
     border-radius: 20px;
     color: $prim-color-blue;
-    background: #fff;
+    background: $white;
     text-align: center;
     height: 100%;
 
