--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,10 +2,12 @@ $prim-color-blue: #2454ff;
 $prim-color-green: #d8ff69;
 $prim-color-black: #262525;
 $prim-color-grey: #6D6D6D;
+$error-color: #e93626;
+$success-color: #56f4a7;
 
 $primary-bg-color: #edebe1;
 $tag-bg-color: #F16458;
-$white: #ffffff;
+$white: #fff;
 $placeholder-color: #92929D;
 
 $text-gigantic: 64px;
