--- a/src/app/dashboard/components/FormikInput/FormikInput.module.scss
+++ b/src/app/dashboard/components/FormikInput/FormikInput.module.scss
@@ -30,6 +30,15 @@
         color: gray;
     }
 
+    &.fileInput {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        opacity: 0;
+        pointer-events: none;
+    }
+
     &.inputSuccess {
         border: 1px solid $success-color;
     }
