--- a/src/app/dashboard/team/page.module.scss
+++ b/src/app/dashboard/team/page.module.scss
@@ -1,57 +1,22 @@
 @import "src/styles/variables.scss";
 
-.section {
-  @media (max-width: 834px) {
-    padding-bottom: $distance-very-small;
+.pageLoaderWrapper {
+  .loader {
+    height: 100vh;
+    font-size: 10px;
   }
+}
 
-  h1 {
-    margin-bottom: $distance-small;
-    width: 100% !important;
-  }
+.title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1;
+  text-transform: capitalize;
 
-  h4 {
-    max-width: 36.8125rem;
-    margin-bottom: $distance-normal;
+  margin-bottom: 28px;
+}
 
-
-    @media (max-width: 834px) {
-      font-weight: normal;
-    }
-  }
-
-  .bannerBlock {
-    position: relative;
-    height: 366px;
-
-    .banner {
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      border-radius: 0 0 $border-radius-big $border-radius-big;
-    }
-
-    .welcome {
-      position: absolute;
-      bottom: 25px;
-      right: 20px;
-      width: auto;
-      object-fit: contain;
-    }
-
-    @media (max-width: 1440px) {
-      height: 500px;
-    }
-
-    @media (max-width: 834px) {
-      height: 300px;
-
-      .welcome {
-        width: 164px;
-        height: 92px;
-        bottom: 10px;
-        right: 10px;
-      }
-    }
-  }
+.addNewMember {
+  width: 100%;
+  max-width: 780px;
 }
